<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="button1">SPOTIFY STREAMER</string>
    <string name="button2">SCORES APP</string>
    <string name="button3">LIBRARY APP</string>
    <string name="button4">BUILD IT BIGGER</string>
    <string name="button5">XYZ READER</string>
    <string name="button6">CAPSTONE: MY OWN APP</string>

    <string name="click1">This button will launch my Spotify Streamer app!</string>
    <string name="click2">This button will launch my Scores app!</string>
    <string name="click3">This button will launch my Library app!</string>
    <string name="click4">This button will launch my Build It Bigger app!</string>
    <string name="click5">This button will launch my XYZ Reader app!</string>
    <string name="click6">This button will launch my Capstone app!</string>
</resources>
